# stark-crypto-wrapper-py

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  PR.yml  build-upload.yml
python/fast_stark_crypto/: lib.py
src/: lib.rs  starknet_messages.rs
tests/: test_key_generation_rust_integration.py  test_limit_order_msg_rust_integration.py  test_order_msg_rust_integration.py  test_transfer_msg_rust_integration.py  test_withdrawal_msg_rust_integration.py
