[package]
name = "fast-stark-crypto"
version = "0.3.4-alpha"
edition = "2021"

[lib]
name = "fast_stark_crypto"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.1"
rust-crypto-lib-base = { path = "./rust-crypto-lib-base" }
starknet-crypto = "0.7.4"


[build-dependencies]
cc = { version = "1" }
pyo3-build-config = { version = "^0.20" }
