[package]
name = "fast-stark-crypto"
version = "0.3.7"
edition = "2021"

[lib]
name = "fast_stark_crypto"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.2"
rust-crypto-lib-base = { version = "0.1.0", path = "./rust-crypto-lib-base" }
starknet-crypto = "0.8.1"

[build-dependencies]
cc = "1.2.39"
pyo3-build-config = "0.20.2"
